--- a/index.html
+++ b/index.html
@@ -148,6 +148,7 @@
                     <script type="text/template">
                         # Try the *<span class="link"><a target="_blank" href="https://users.wpi.edu/~wliu6">Demo</a></span>*!
                         
+                        <span class="link"><a target="_blank" href="https://users.wpi.edu/~wliu6">Click Me.</a></span>
 
                     </script>
                 </section>
