--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
                 <section style="margin-top:2%" data-markdown>
                     <script type="text/template">
-                        # Calendar Management Systems *Demo*
+                        # Calendar Management Systems *<span class="link"><a target="_blank" href="https://users.wpi.edu/~wliu6">Demo</a></span>*
                     
 
                         <iframe frameborder="0" scrolling="0" width="90px" height="22px" src="https://ghbtns.com/github-btn.html?user=lionandbull&amp;repo=cms-slides&amp;type=star&amp;count=true">
@@ -53,7 +53,7 @@
                 
                 <section style="margin-top:2%" data-markdown>
                     <script type="text/template">
-                        # What is Calendar Management Systems?
+                        # What is the *Calendar Management Systems*?
                         Calendar Management System (CMS) is a cloud-based project that can help users to manage their meetings. CMS uses Amazon Web Service including Amazon RDS, Amazon S3, Amazon Lambda Service and Amazon Cognito.
                     </script>
                 </section>
