--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <section style="margin-top:2%" data-markdown>
                     <script type="text/template">
                         # What is the *Calendar Management Systems*?
-                        Calendar Management System (CMS) is a cloud-based project that can help users to manage their meetings. CMS uses Amazon Web Service including Amazon RDS, Amazon S3, Amazon Lambda Service and Amazon Cognito.
+                        Calendar Management Systems (CMS) is a cloud-based project that can help users to manage their meetings. CMS uses Amazon Web Service including Amazon RDS, Amazon S3, Amazon Lambda Service and Amazon Cognito.
                     </script>
                 </section>
                 <!-- <section data-markdown>
