--- a/index.html
+++ b/index.html
@@ -146,9 +146,9 @@
 
                  <section data-markdown>
                     <script type="text/template">
-                        # Try the *<span class="link"><a target="_blank" href="https://users.wpi.edu/~wliu6">Demo</a></span>*!
+                        # Try the *<span class="link"><a target="_blank" href="https://lionandbull.github.io/calendar-management-systems/">Demo</a></span>*!
                         
-                        <span class="link"><a target="_blank" href="https://users.wpi.edu/~wliu6">Click Me.</a></span>
+                        <span class="link"><a target="_blank" href="https://lionandbull.github.io/calendar-management-systems/">Click Me.</a></span>
 
                     </script>
                 </section>
