--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
                 <section style="margin-top:2%" data-markdown>
                     <script type="text/template">
-                        # Calendar Management Systems *<span class="link"><a target="_blank" href="https://users.wpi.edu/~wliu6">Demo</a></span>*
+                        # Calendar Management Systems *<span class="link"><a target="_blank" href="https://lionandbull.github.io/calendar-management-systems/">Demo</a></span>*
                     
 
                         <iframe frameborder="0" scrolling="0" width="90px" height="22px" src="https://ghbtns.com/github-btn.html?user=lionandbull&amp;repo=cms-slides&amp;type=star&amp;count=true">
